# larana

./: CMakeLists.txt
larana/CosmicRemoval/: BeamFlashTrackMatchTaggerAlg.cxx  BeamFlashTrackMatchTaggerAlg.h  CMakeLists.txt  CRHitRemoval_module.cc  CosmicClusterTagger_module.cc  CosmicPCAxisTagger_module.cc  CosmicPFParticleTagger_module.cc  CosmicTrackTagger_module.cc  TrackContainmentAnalyzer_module.cc  TrackContainmentTagger_module.cc
larana/CosmicRemoval/TrackContainment/: CMakeLists.txt  TrackContainmentAlg.cxx  TrackContainmentAlg.hh
larana/OpticalDetector/: CMakeLists.txt  FlashHypothesisAna_module.cc  OpDetResponseInterface.h  OpDigiProperties.cc  OpDigiProperties.h  OpFlashAlg.cxx  OpFlashAlg.h  OpFlashAna_module.cc  OpFlashFinder_module.cc  OpFlashSimpleAna_module.cc  OpHitAna_module.cc  OpHitFinder_module.cc  OptDetDigitizer_module.cc  OpticalRawDigitReformatter_module.cc  PMTAna_module.cc  SimPhotonCounter_module.cc
larana/OpticalDetector/OpHitFinder/: AlgoCFD.cxx  AlgoCFD.h  AlgoFixedWindow.cxx  AlgoFixedWindow.h  AlgoSiPM.cxx  AlgoSiPM.h  AlgoSlidingWindow.cxx  AlgoSlidingWindow.h  AlgoThreshold.cxx  AlgoThreshold.h  CMakeLists.txt  OpHitAlg.cxx  OpHitAlg.h  PMTPulseRecoBase.cxx  PMTPulseRecoBase.h  PulseRecoManager.cxx  PulseRecoManager.h
larana/ParticleIdentification/: CMakeLists.txt  Chi2PIDAlg.cxx  Chi2PIDAlg.h  LikelihoodPIDAlg.cxx  LikelihoodPIDAlg.h  LikelihoodParticleID_module.cc  MVAAlg.cxx  PhysdEdx.cxx  PhysdEdx.h  particleid.fcl  pidalgorithms.fcl
larana/ParticleIdentification/scripts/: CMakeLists.txt
larana/T0Finder/: CMakeLists.txt
larana/T0Finder/AssociationsTools/: CMakeLists.txt
test/OpticalDetector/: CMakeLists.txt
ups/: product_deps
(+3 files in other folders)
